# Bootloader

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  CMakePresets.json  make_new_key.sh
examples/cmake/: helpers.cmake
examples/common/: CMakeLists.txt  bootloader_example.cpp  hardware_specific.h
examples/common/tests/: CMakeLists.txt  demo_application.cpp  test_implementation.cpp
examples/qemu/: CMakeLists.txt  hardware_specific.cpp
examples/qemu/toolchain/: generate_flash_layout_files.cmake  memory_ram.ld  memory_spec.ld  region_alias.ld  region_alias_application.ld  region_alias_bootloader_and_test.ld  toolchain.cmake
examples/stm32f407/: CMakeLists.txt  CMakePresets.json  blinky.cpp  bootloader_impl.cpp
examples/stm32f407/cmake/: arm_none_eabi.cmake  helpers.cmake  run_openocd_script.cmake
examples/stm32f407/cube/: CMakeLists.txt  arm_none_eabi.cmake  cube.ioc  memory_spec_ram.ld  run_openocd_script.cmake  startup.S  startup.cpp  stm32f4xx_hal_conf.h
examples/stm32f407/cube/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_flash_ex.c
examples/stm32f407/libs/flash_layout/: CMakeLists.txt  flash_layout.h.in  memory_spec.ld.in
examples/stm32f407/libs/libc/: CMakeLists.txt  libc_functions.cpp
examples/stm32f407/qemu/: CMakeLists.txt  arm_none_eabi.cmake  dummy.cpp  section_mapping.ld  startup_qemu.S
examples/stm32f407/sources/: CMakeLists.txt  flash_layout.h.in  memory_spec.ld.in  region_alias.ld  region_alias_qemu.ld  reset_arm_cortex.cpp  section_mapping.ld  startup.S
examples/stm32f407/stm32f407/: CMakeLists.txt  blinky.cpp  bootloader_impl.cpp  startup.cpp
examples/stm32f407/stm32f407/cube/: CMakeLists.txt
examples/stm32f407/toolchain/: arm_none_eabi.cmake  generate_flash_layout_files.cmake  memory_ram.ld  toolchain.cmake
examples/stm32f407/toolchains/: toolchain_base_arm_none_eabi.cmake
examples/stm32f429/: CMakeLists.txt  CMakePresets.json
examples/stm32f429/cube/: CMakeLists.txt  bootloader.ioc
examples/stm32f429/sources/: CMakeLists.txt  flash_layout.h.in  region_alias.ld  reset_arm_cortex.cpp  section_mapping.ld  startup.S  stm32f4xx_hal_conf.h
examples/stm32f429/toolchain/: arm_none_eabi.cmake
examples/stm32h743/: CMakeLists.txt  blinky.cpp  bootloader_impl.cpp  hardware_specific.cpp
examples/stm32h743/cube/: CMakeLists.txt  cube.ioc  startup.S  startup.cpp  stm32h7xx_hal_conf.h
examples/stm32h743/tests/: CMakeLists.txt  application_v2.cpp  test_bootloader_implementation.ld  test_implementation.cpp
examples/stm32h743/toolchain/: board.cfg  generate_flash_layout_files.cmake  memory_ram.ld  region_alias_application.ld  region_alias_bootloader.ld  region_alias_test.ld  run_openocd_script.cmake  toolchain.cmake
examples/toolchains/: arm_none_eabi.cmake  in.flash_layout.h  in.memory_spec.ld  section_mapping.ld  toolchain_base_arm_none_eabi.cmake
examples/toolchains/qemu/: toolchain_qemu.cmake
source/: CMakeLists.txt  bootloader.cpp  bootloader.h
source/arm_m_profile/: CMakeLists.txt  flash_layout.h.in  region_alias.ld  reset_arm_cortex.cpp  section_mapping.ld
source/bootloader/: bootloader.h
source/compression/: CMakeLists.txt  gzip.cpp  gzip.h  test_gzip.cpp  test_gzip_compressed.h  test_gzip_uncompressed.h
source/compression/bootloader/: gzip.h
source/core_arm_m_profile/: CMakeLists.txt  memory_spec.ld.in  reset_arm_cortex.cpp  section_mapping.ld  startup.S
source/core_dummy/: CMakeLists.txt  dummy.cpp
source/crc/: CMakeLists.txt  crc.h  sw_crc.cpp  test_sw_crc.cpp
source/crc/bootloader/: crc.h
source/crypto/: CMakeLists.txt  aes.h  crypto.h  test_aes128.cpp
source/crypto/bootloader/: aes.h  crypto.h
source/skip_application/: CMakeLists.txt  skip_application.h  skip_application_noinit_ram.cpp  test_skip_application.cpp
source/skip_application/bootloader/: skip_application.h
source/version_info/: CMakeLists.txt  version_info.h
source/version_info/bootloader/: version_info.h
toolchain/: arm_none_eabi.cmake  arm_none_eabi.cmake.hints  gcc.cmake
