include(FetchContent)

# set(BUILD_SHARED_LIBS OFF)
# set(ZLIB_BUILD_EXAMPLES OFF)

#FetchContent_Declare(cryptopp
#    GIT_REPOSITORY https://github.com/weidai11/cryptopp.git
#    GIT_TAG CRYPTOPP_8_9_0
#)

# FetchContent_Declare(zlib
#     GIT_REPOSITORY https://github.com/madler/zlib.git
#     GIT_TAG v1.3.1
# )

# FetchContent_MakeAvailable(zlib)

