add_subdirectory(compression)
add_subdirectory(skip_application)
add_subdirectory(version_info)
add_subdirectory(crc)
add_subdirectory(crypto)

add_library(core INTERFACE)
target_sources(core INTERFACE bootloader.cpp)
target_include_directories(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
add_library(Bootloader::core ALIAS core)
