add_library(bootloader_gzip OBJECT EXCLUDE_FROM_ALL gzip.cpp)
target_include_directories(bootloader_gzip PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(bootloader_gzip PUBLIC Bootloader::config_base Bootloader::crc_impl)
add_library(Bootloader::gzip ALIAS bootloader_gzip)

if(BUILD_TESTING)
add_executable(test_gzip test_gzip.cpp)
target_link_libraries(test_gzip PRIVATE Bootloader::test_base bootloader_gzip Bootloader::crc_impl)
target_include_directories(test_gzip PUBLIC ${CMAKE_CURRENT_LIST_DIR})
add_test(NAME test_gzip COMMAND test_gzip)
endif()
