add_library(bootloader_gzip INTERFACE)
target_sources(bootloader_gzip INTERFACE gzip.cpp)
target_include_directories(bootloader_gzip INTERFACE ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(bootloader_gzip INTERFACE Bootloader::crc)
add_library(Bootloader::gzip ALIAS bootloader_gzip)

if(BUILD_TESTING)
add_executable(test_gzip test_gzip.cpp)
target_link_libraries(test_gzip PRIVATE bootloader_gzip Bootloader::crc_impl)
target_include_directories(test_gzip PUBLIC ${CMAKE_CURRENT_LIST_DIR})
add_test(NAME test_gzip COMMAND test_gzip)
endif()
