add_library(skip_application INTERFACE)
target_include_directories(skip_application INTERFACE ${CMAKE_CURRENT_LIST_DIR})
add_library(Bootloader::skip_application ALIAS skip_application)

add_library(skip_application_noinit_ram INTERFACE)
target_sources(skip_application_noinit_ram INTERFACE skip_application_noinit_ram.cpp)
target_link_libraries(skip_application_noinit_ram INTERFACE skip_application)
add_library(Bootloader::skip_application_impl ALIAS skip_application_noinit_ram)

if(BUILD_TESTING)
add_executable(test_skip_application test_skip_application.cpp)
target_link_libraries(test_skip_application PRIVATE skip_application_noinit_ram)
add_test(NAME test_skip_application COMMAND test_skip_application)
endif()
